--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "http-server": "^14.1.0",
     "react": "^18.1.0",
     "react-bootstrap": "^2.3.1",
+    "react-datepicker": "^4.8.0",
     "react-dom": "^18.1.0",
+    "react-hook-form": "^7.31.1",
+    "react-quill": "^1.3.5",
     "react-redux": "^8.0.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
@@ -43,5 +46,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "css-loader": "^6.7.1",
+    "style-loader": "^3.3.1"
   }
 }
